[package]
name = "tex_gaato_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
mathjax_svg = "3.1.0"
png = "0.17.10"
resvg = "0.36.0"
serde = { version = "1.0.192", features = ["serde_derive"] }
thiserror = "1.0.50"
tiny-skia = "0.11.2"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
